About/Information- Responsive and Alignment corrected
heading is center aligned

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2037,7 +2037,7 @@ input, select, textarea {
 	  } 
 	  
 	  .skills-header {
-		width:fit-content;
+		width:100%;
 		font-size: 1.5rem;
 		line-height: 1.4;
 		letter-spacing: 0.5rem;
@@ -2152,17 +2152,16 @@ input, select, textarea {
 		}
 		
 		.skills-header {
-			margin-left: 1rem;
 			width: auto;
-			font-size: 0.9rem;
+			font-size: 1.2rem;
 			line-height: 1;
 			letter-spacing: .5rem;
 			color: #e9e9e9;
 			margin-bottom: 1.5rem;
+			text-align: center;
 		}
 
 		.skills-text {
-			margin-left: 2rem;
 			font-size: 1rem;
 			letter-spacing: 0.1rem;
 			line-height: 1.7;
@@ -2187,7 +2186,7 @@ input, select, textarea {
 			margin-bottom: 1rem;
 			align-items: center;
 			width: 100%;
-			padding: 0 0 1rem;
+			/* padding: 1rem -.5rem 1rem; */
 			overflow:hidden; 
 			box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
 		}
@@ -2417,22 +2416,28 @@ input, select, textarea {
 
 	@media only screen and (max-width: 60em) {
 		.progress-con{
+			
 			width: 95%;
 		}
 		.fa-circle{
 			font-size: 0.5rem;
 		}
 		.progress-title{
+			width: max-content;
 			color: #ffffff;
 			font-weight: 600;
 			line-height: 1.5;
 			margin: 0 1rem 1rem 0;
-			font-size: 0.6rem;
+			font-size: 1rem;
 			text-transform: uppercase;
 			letter-spacing: 0.2rem;
 		}
 		.premier-bars{
+			padding: -1rem;
 			width: 100%;
+		}
+		.skills-content{
+			/* padding: ; */
 		}
 	}
 
